--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -140,6 +140,10 @@ NXT_ANNOUNCE_URL=http://demo.n3xtsource.com/announce/<TRACKER_PASS_KEY>
 TL_API_KEY= # TRACKER_PASS_KEY
 TL_ANNOUNCE_URL=https://tracker.torrentleech.org/a/<TRACKER_PASS_KEY>/announce https://tracker.tleechreload.org/a/<TRACKER_PASS_KEY>/announce
 
+# Fearnooper
+FNP_API_KEY=# API_KEY
+FNP_ANNOUNCE_URL=https://fearnopeer.com/announce/<TRACKER_PASS_KEY>
+
 ################################################################
 #                                                              #
 #                    Other API Keys / Defaults                 #
