uhd bits dupecheck working

--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -117,7 +117,7 @@ PTP_API_KEY=# API_KEY
 PTP_ANNOUNCE_URL=<TRACKER_ANNOUNCE_URL>
 PTP_USER_NAME=# Username of your PTP Account
 PTP_USER_PASSWORD=# Password to your account (encouraged to wrap it inside "" )
-PTP_2FA_ENABLED=False # Set this to True if you have 2fa enabled for your account.
+PTP_2FA_ENABLED=False# Set this to True if you have 2fa enabled for your account.
 PTP_2FA_CODE=# The 2FA key to generate 2FA codes
 
 # GreatPostertWall
@@ -148,6 +148,13 @@ ULCX_ANNOUNCE_URL=http://upload.cx/announce/<TRACKER_PASS_KEY>
 FNP_API_KEY=# API_KEY
 FNP_ANNOUNCE_URL=https://fearnopeer.com/announce/<TRACKER_PASS_KEY>
 
+# UHDBits
+UHDB_API_KEY=# Set this to same value as UHDB_USER_NAME
+UHDB_USER_NAME=# USER_NAME
+UHDB_USER_PASSWORD=# PASSWORD
+UHDB_2FA_ENABLED=False# Set this to True if you have 2fa enabled for your account.
+UHDB_2FA_CODE=# The 2FA key to generate 2FA codes
+UHDB_ANNOUNCE_URL=http://uhdbits.org:34000/<TRACKER_PASS_KEY>/announce
 
 ################################################################
 #                                                              #
