New Tracker: OnlyEncodes

--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -148,6 +148,10 @@ ULCX_ANNOUNCE_URL=http://upload.cx/announce/<TRACKER_PASS_KEY>
 FNP_API_KEY=# API_KEY
 FNP_ANNOUNCE_URL=https://fearnopeer.com/announce/<TRACKER_PASS_KEY>
 
+# OnlyEncodes
+OE_API_KEY= # API_KEY
+OE_ANNOUNCE_URL=https://onlyencodes.cc/announce/<TRACKER_PASS_KEY>
+
 
 ################################################################
 #                                                              #
