--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -144,7 +144,7 @@ TL_ANNOUNCE_URL=https://tracker.torrentleech.org/a/<TRACKER_PASS_KEY>/announce h
 ULCX_API_KEY= # API_KEY
 ULCX_ANNOUNCE_URL=http://upload.cx/announce/<TRACKER_PASS_KEY>
 
-# Fearnoopeer
+# Fearnopeer
 FNP_API_KEY=# API_KEY
 FNP_ANNOUNCE_URL=https://fearnopeer.com/announce/<TRACKER_PASS_KEY>
 
@@ -152,7 +152,7 @@ FNP_ANNOUNCE_URL=https://fearnopeer.com/announce/<TRACKER_PASS_KEY>
 OE_API_KEY= # API_KEY
 OE_ANNOUNCE_URL=https://onlyencodes.cc/announce/<TRACKER_PASS_KEY>
 
-# Fearnopeer
+# OldToonsWorld
 OTW_API_KEY=# API_KEY
 OTW_ANNOUNCE_URL=https://oldtoons.world/announce/<TRACKER_PASS_KEY>
 
