--- a/samples/reuploader/reupload.config.env
+++ b/samples/reuploader/reupload.config.env
@@ -139,6 +139,10 @@ FNP_ANNOUNCE_URL=https://fearnopeer.com/announce/<TRACKER_PASS_KEY>
 OE_API_KEY= # API_KEY
 OE_ANNOUNCE_URL=https://onlyencodes.cc/announce/<TRACKER_PASS_KEY>
 
+# OldToonsWorld
+OTW_API_KEY=# API_KEY
+OTW_ANNOUNCE_URL=https://oldtoons.world/announce/<TRACKER_PASS_KEY>
+
 
 # Dynamic Tracker Selection
 # -----------------------------------------
