Updated BLU announce url

--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -41,7 +41,7 @@ BHD_ANNOUNCE_URL=https://beyond-hd.me/announce/<TRACKER_PASS_KEY>
 
 # Blutopia
 BLU_API_KEY=# API_KEY
-BLU_ANNOUNCE_URL=https://blutopia.xyz/announce/<TRACKER_PASS_KEY>
+BLU_ANNOUNCE_URL=https://blutopia.cc/announce/<TRACKER_PASS_KEY>
 
 # Racing4Everyone
 R4E_API_KEY=# API_KEY
