--- a/samples/reuploader/reupload.config.env
+++ b/samples/reuploader/reupload.config.env
@@ -311,8 +311,8 @@ cache_type=Mongo
 cache_host=mongo
 cache_port=27017
 cache_database=gg-bot-reuploader
-cache_username=# mongo username
-cache_password=# mongo password
+cache_username=ggbot
+cache_password=ggbot
 
 
 
