--- a/dev_scripts/mongo/.mongo.env
+++ b/dev_scripts/mongo/.mongo.env
@@ -1,4 +1,3 @@
-
 # GG Bot Upload Assistant
 # Copyright (C) 2022  Noob Master669
 
@@ -15,26 +14,9 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
-# Base path for GG-BOT Auto Re-Uploader files and configurations
-BASE_PATH=/home/user/gg-bot
-
-# Optional Port for Mongo Express
-MONGO_EXPRESS_EXPOSE_PORT=8081
-
-# Qbittorrent ports
-QBITTORRENT_PORT_6881=6881
-QBITTORRENT_WEBUI_PORT=8080
-
-# Rutorrent Ports
-RUTORRENT_WEBUI_PORT=8082
-RUTORRENT_EXTRA_PORTS=51415
-
-# GG-BOT Visor Server Ports
-VISOR_SERVER_PORT=30035
-
-# Services image versions
-GG_BOT_REUPLOADER_VERSION=3.1.2-reuploader
-MONGO_EXPRESS_VERSION=1.0.2-20
-MONGO_VERSION=7.0.7
-QBITTORRENT_VERSION=4.6.3
-RUTORRENT_VERSION=develop-v8
+MONGO_INITDB_ROOT_USERNAME=ggbot
+MONGO_INITDB_ROOT_PASSWORD=ggbot
+MONGO_INITDB_DATABASE=admin
+MONGO_DB_NAME=gg-bot-reuploader
+MONGO_DB_USERNAME=ggbot
+MONGO_DB_PASSWORD=ggbot
