--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,13 +11,14 @@ repos:
       - id: check-yaml
       - id: check-ast
       - id: check-added-large-files
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.3.4
+    hooks:
+      - id: ruff
+        args: [ --fix ]
+      - id: ruff-format
   - repo: local
     hooks:
-      # - id: pylint
-      #   name: check code for errors
-      #   language: system
-      #   entry: poetry run pylint
-      #   types: [python]
       - id: codespell
         name: check for misspellings
         description: Check for common misspellings in text files
@@ -38,37 +39,10 @@ repos:
         language: system
         entry: poetry run codespell
         types: [text]
-      - id: black
-        name: format python code
-        description: Automatically format code to follow the black code style
-        language: system
-        entry: poetry run black
-        types_or: [python, pyi]
-        require_serial: true
-#      - id: isort
-#        name: sort python imports
-#        description: Automatically sort import statements
+#      - id: pyupgrade
+#        name: check for old python syntax
+#        description: Automatically upgrade syntax for newer versions
+#        args: [--py36-plus, --keep-runtime-typing]
 #        language: system
-#        entry: poetry run isort
-#        types_or: [cython, pyi, python]
-#        require_serial: true
-      - id: pyupgrade
-        name: check for old python syntax
-        description: Automatically upgrade syntax for newer versions
-        args: [--py36-plus, --keep-runtime-typing]
-        language: system
-        entry: poetry run pyupgrade
-        types: [python]
-      # - id: mypy
-      #   name: type check python code
-      #   description: Static type checker for Python
-      #   language: system
-      #   entry: poetry run mypy
-      #   types_or: [python, pyi]
-      #   require_serial: true
-      # - id: pydocstyle
-      #   name: check docstrings
-      #   description: Check docstrings
-      #   language: system
-      #   entry: poetry run pydocstyle
-      #   types: [python]
+#        entry: poetry run pyupgrade
+#        types: [python]
