--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -31,6 +31,10 @@
 #           Private tracker API keys & Announce URLs           #
 #                                                              #
 ################################################################
+# Shareisland
+SHRI_API_KEY=# API_KEY
+SHRI_ANNOUNCE_URL=https://shareisland.org/announce/<TRACKER_PASS_KEY>
+
 # AsianCinema
 ACM_API_KEY=# API_KEY
 ACM_ANNOUNCE_URL=https://asiancinema.me/announce/<TRACKER_PASS_KEY>
