Add support for Vision-HD.org

--- a/samples/reuploader/reupload.config.env
+++ b/samples/reuploader/reupload.config.env
@@ -147,6 +147,10 @@ OE_ANNOUNCE_URL=https://onlyencodes.cc/announce/<TRACKER_PASS_KEY>
 OTW_API_KEY=# API_KEY
 OTW_ANNOUNCE_URL=https://oldtoons.world/announce/<TRACKER_PASS_KEY>
 
+# Vision-HD
+VHD_API_KEY=# API_KEY
+VHD_ANNOUNCE_URL=https://vision-hd.org/announce/<TRACKER_PASS_KEY>
+
 
 # Dynamic Tracker Selection
 # -----------------------------------------
