--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -160,6 +160,10 @@ OE_ANNOUNCE_URL=https://onlyencodes.cc/announce/<TRACKER_PASS_KEY>
 OTW_API_KEY=# API_KEY
 OTW_ANNOUNCE_URL=https://oldtoons.world/announce/<TRACKER_PASS_KEY>
 
+# Vision-HD
+VHD_API_KEY=# API_KEY
+VHD_ANNOUNCE_URL=https://vision-hd.org/announce/<TRACKER_PASS_KEY>
+
 
 ################################################################
 #                                                              #
