--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -31,6 +31,10 @@
 #           Private tracker API keys & Announce URLs           #
 #                                                              #
 ################################################################
+# DarkLand
+DL_API_KEY=# API_KEY
+DL_ANNOUNCE_URL=https://darkland.top/announce/<TRACKER_PASS_KEY>
+
 # Shareisland
 SHRI_API_KEY=# API_KEY
 SHRI_ANNOUNCE_URL=https://shareisland.org/announce/<TRACKER_PASS_KEY>
