--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -212,6 +212,7 @@ imgfi_api_key=# Get in touch with staff to get API KEY
 imgur_api_key=# this is your client_secret
 imgur_client_id=# register your application (https://api.imgur.com/oauth2/addclient) with Anonymous usage without user authorization to get client id and secret
 lensdump_api_key=
+ptscreens_api_key=
 
 # pretty self explanatory, this will take number of screenshots you want, all evenly spaced depending on how long the video is
 # Set this to 0 if you want to upload without taking any screenshots
