--- a/.gitlab/ci/tests.gitlab-ci.yml
+++ b/.gitlab/ci/tests.gitlab-ci.yml
@@ -14,6 +14,23 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
+
+# ********************************************** #
+# ********************************************** #
+#                 E2E Tests GG-BOT               #
+# ********************************************** #
+# ********************************************** #
+# E2E tests for Parent Repo with report generation
+e2e-test:
+  stage: test
+  image: noobmaster669/gg-bot-base:test-latest
+  variables:
+    SOURCE_DIRECTORY: gg-bot-upload-assistant
+  script:
+    - pip install -r requirements/requirements_test.txt
+    - pip freeze > requirements/requirements_test.txt
+    - pytest -vv --show-capture=stdout --cov-report=html --junitxml=junit_report.xml --cov=./ e2e-tests/
+
 # ********************************************** #
 # ********************************************** #
 #                Unit Tests GG-BOT               #
@@ -28,7 +45,7 @@ unit-test:
   script:
     - pip install -r requirements/requirements_test.txt
     - pip freeze > requirements/requirements_test.txt
-    - pytest -vv --show-capture=stdout --cov-report=html --junitxml=junit_report.xml --cov=./ .
+    - pytest -vv --show-capture=stdout --cov-report=html --junitxml=junit_report.xml --cov=./ tests/
     # generating xml coverage report for various platforms
     - coverage report
     - coverage xml -o coverage.xml
