--- a/.gitlab/ci/base-images.gitlab-ci.yml
+++ b/.gitlab/ci/base-images.gitlab-ci.yml
@@ -140,7 +140,7 @@ gg-bot-base-test:
       echo "Publishing Image to Docker Hub Container Registry: '$DOCKER_CI_REGISTRY_BASE_IMAGE:test-latest"
     - docker push "$DOCKER_CI_REGISTRY_BASE_IMAGE:test-latest"
   rules:
-    - if: "$CI_COMMIT_BRANCH == 'feature/code_refactor_v4'" # runs only on dev branch
+    - if: "$CI_COMMIT_BRANCH == 'dev'" # runs only on dev branch
       changes:
         - Dockerfiles/Dockerfile.baseimage.test
 
