Test containers | One E2E test with apis mocked

--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -146,7 +146,7 @@ NXT_ANNOUNCE_URL=http://demo.n3xtsource.com/announce/<TRACKER_PASS_KEY>
 
 # TorrentLeech
 TL_API_KEY= # TRACKER_PASS_KEY
-TL_ANNOUNCE_URL=https://tracker.torrentleech.org/a/<TRACKER_PASS_KEY>/announce https://tracker.tleechreload.org/a/<TRACKER_PASS_KEY>/announce
+TL_ANNOUNCE_URL='https://tracker.torrentleech.org/a/<TRACKER_PASS_KEY>/announce https://tracker.tleechreload.org/a/<TRACKER_PASS_KEY>/announce'
 
 # Upload.cx
 ULCX_API_KEY= # API_KEY
@@ -168,7 +168,6 @@ OTW_ANNOUNCE_URL=https://oldtoons.world/announce/<TRACKER_PASS_KEY>
 VHD_API_KEY=# API_KEY
 VHD_ANNOUNCE_URL=https://vision-hd.org/announce/<TRACKER_PASS_KEY>
 
-
 ################################################################
 #                                                              #
 #                    Other API Keys / Defaults                 #
@@ -183,10 +182,6 @@ IMDB_API_KEY= # https://imdb-api.com/api
 # eg: default_tracker_list=NBL,BLU,BHDTV -> This will by default uploads the torrent to NBL, BLU and BHDTV if `--trackers or -t` is not provided as command line argument.
 # please not that the command line argument `--trackers or -t` has higher priority and overrides `default_tracker_list` property.
 default_trackers_list=
-
-
-
-
 
 ################################################################
 #                                                              #
@@ -226,10 +221,6 @@ thumb_size=350
 # when no_spoilers is disabled, screenshots will be taken from the whole file after equal intervals
 no_spoilers=True
 
-
-
-
-
 ################################################################
 #                                                              #
 #                Check for dupes (true | false)                #
@@ -257,10 +248,6 @@ check_dupes=True
 # --------------------------- #
 acceptable_similarity_percentage=75
 
-
-
-
-
 ################################################################
 #                                                              #
 #                            Auto Mode                         #
@@ -279,8 +266,6 @@ auto_mode=False
 # !! It's recommended to keep this set to 'False' !! (Remember, you are responsible for following all tracker rules!)
 force_auto_upload=False
 
-
-
 # Live / Draft (BHD)
 # ------------------------------------------------------------ #
 # This only applies to BHD since they are the only site that have a 'draft'/'live on site' option
@@ -288,8 +273,6 @@ force_auto_upload=False
 #   True == Live on site, everyone can see it
 #   False == Goes to your private drafts https://beyond-hd.me/drafts
 live=False
-
-
 
 # This is required to upload raw bluray discs (.iso not supported)
 # download & install docker then clone https://github.com/zoffline/BDInfoCLI-ng
@@ -299,10 +282,6 @@ live=False
 # If you are using the docker version of the uploader, then there is not need to fill in this value
 # just use FullDisk-{TAG} docker image and you are good to go
 bdinfo_script=
-
-
-
-
 
 ################################################################
 #                                                              #
@@ -322,8 +301,6 @@ enable_post_processing=False
 # you can select the mode using this property. (CROSS_SEED / WATCH_FOLDER)
 post_processing_mode=CROSS_SEED
 
-
-
 # WATCH_FOLDER_CONFIGS
 # Note: Please ensure that the below two paths (if configured) are available and writable.
 # Uploader will not create these paths.
@@ -340,8 +317,6 @@ media_move_location=
 #     movies file will be moved to {media_move_location}/movie/...file
 #     episodes file will be moved to {media_move_location}/episode/...file
 enable_type_base_move=False
-
-
 
 # CROSS-SEEDING CONFIGS
 # Specifies the client to which torrents needs to be uploaded.
@@ -379,14 +354,12 @@ translation_needed=False
 client_accessible_path=
 uploader_accessible_path=
 
-
-
 ################################################################
 #                                                              #
 #                       Uploader Tweaks                        #
 #                                                              #
 ################################################################
-# This property decided whether or not the sub_folders in temp_upload containing screnshots, mediainfo, urls etc needs to be in a human readable format or not.
+# This property decided whether or not the sub_folders in temp_upload containing screenshots, mediainfo, urls etc needs to be in a human readable format or not.
 # By default a unique hash will be generated for the input path and it'll be used.
 # If this property is enabled then the sub_folder will be created using the file name.
 readable_temp_data=False
