--- a/samples/reuploader/reupload.config.env
+++ b/samples/reuploader/reupload.config.env
@@ -65,7 +65,7 @@ TELLY_ANNOUNCE_URL=https://telly.wtf/announce/<TRACKER_PASS_KEY>
 
 # Ntelogo
 NTELOGO_API_KEY=# API_KEY
-NTELOGO_ANNOUNCE_URL= https://ntelogo.org/announce/<TRACKER_PASS_KEY>
+NTELOGO_ANNOUNCE_URL=https://ntelogo.org/announce/<TRACKER_PASS_KEY>
 
 # TheScenePlace
 TSP_API_KEY=# API_KEY
@@ -133,7 +133,7 @@ NXT_ANNOUNCE_URL=http://demo.n3xtsource.com/announce/<TRACKER_PASS_KEY>
 
 # TorrentLeech
 TL_API_KEY= # TRACKER_PASS_KEY
-TL_ANNOUNCE_URL=https://tracker.torrentleech.org/a/<TRACKER_PASS_KEY>/announce https://tracker.tleechreload.org/a/<TRACKER_PASS_KEY>/announce
+TL_ANNOUNCE_URL='https://tracker.torrentleech.org/a/<TRACKER_PASS_KEY>/announce https://tracker.tleechreload.org/a/<TRACKER_PASS_KEY>/announce'
 
 # Upload.cx
 ULCX_API_KEY= # API_KEY
@@ -154,7 +154,6 @@ OTW_ANNOUNCE_URL=https://oldtoons.world/announce/<TRACKER_PASS_KEY>
 # Vision-HD
 VHD_API_KEY=# API_KEY
 VHD_ANNOUNCE_URL=https://vision-hd.org/announce/<TRACKER_PASS_KEY>
-
 
 # Dynamic Tracker Selection
 # -----------------------------------------
@@ -178,8 +177,6 @@ VHD_ANNOUNCE_URL=https://vision-hd.org/announce/<TRACKER_PASS_KEY>
 #   - If none of the dynamic trackers, are valid or not configured properly, then reuploader will attempt to upload to the `fall_back_trackers`.
 dynamic_tracker_selection=False
 
-
-
 ################################################################
 #                                                              #
 #                    Other API Keys / Defaults                 #
@@ -190,7 +187,6 @@ TMDB_API_KEY= # https://www.themoviedb.org/documentation/api
 # IMDB API key (Optional)
 IMDB_API_KEY= # https://imdb-api.com/api
 
-
 # This below property determines whether or not the tmdb id will be automatically decided by the uploader or not.
 # Be default this is set as 1, which is the safest configuration (although not fool proof)
 # 1 => This indicates that if the TMDB search returns only 1 result, then auto select that and proceed.
@@ -198,9 +194,6 @@ IMDB_API_KEY= # https://imdb-api.com/api
 # for detailed explanation see wiki pages
 # If you want to ignore this config just set it to 0. (the first result will always be selected !!!DANGEROUS!!! )
 tmdb_result_auto_select_threshold=1
-
-
-
 
 ################################################################
 #                                                              #
@@ -239,7 +232,6 @@ thumb_size=350
 # when no_spoilers is disabled, screenshots will be taken from the whole file after equal intervals
 no_spoilers=True
 
-
 ################################################################
 #                                                              #
 #                Check for dupes (true | false)                #
@@ -267,8 +259,6 @@ check_dupes=True
 # --------------------------- #
 acceptable_similarity_percentage=75
 
-
-
 ################################################################
 #                                                              #
 #                Pre-Processing Configurations                 #
@@ -278,8 +268,6 @@ acceptable_similarity_percentage=75
 translation_needed=False
 client_accessible_path= # Path provided by torrent client
 uploader_accessible_path= # Path accessible to GG-BOT Auto ReUploader
-
-
 
 ################################################################
 #                                                              #
@@ -310,7 +298,6 @@ client_password=# my_password
 # applicable for rutorrent only as of now. Default is /
 client_path=/
 
-
 # Cache Config
 # Some metadata related to the torrents will be cached for better performance and report generation.
 # These data are stored in a redis cache, below are the configuration needed to connect to a redis cache
@@ -326,14 +313,12 @@ cache_database=gg-bot-reuploader
 cache_username=# mongo username
 cache_password=# mongo password
 
-
-
 ################################################################
 #                                                              #
 #                       Uploader Tweaks                        #
 #                                                              #
 ################################################################
-# This property decided whether or not the sub_folders in temp_upload containing screnshots, mediainfo, urls etc needs to be in a human readable format or not.
+# This property decided whether or not the sub_folders in temp_upload containing screenshots, mediainfo, urls etc needs to be in a human readable format or not.
 # By default a unique hash will be generated for the input path and it'll be used.
 # If this property is enabled then the sub_folder will be created using the file name.
 readable_temp_data=False
@@ -346,8 +331,6 @@ readable_temp_data=False
 #   2. The signature will automatically be wrapped inside [center][/center] tag by the upload assistant
 # Sample: uploader_signature=[url=https://ibb.co/VH6n8tC][img]https://i.ibb.co/VH6n8tC/Manchester-United-Logo11.jpg[/img][/url]
 uploader_signature=
-
-
 
 ################################################################
 #                                                              #
