Added Sentry to track errors and exceptions

--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -28,6 +28,19 @@
 
 ################################################################
 #                                                              #
+#               Sentry Error & Exception Tracking              #
+#                                                              #
+################################################################
+# Enable sentry error tracking or not. You can disable this if you don't want
+# to send stack traces and errors to the project sentry error log.
+# This is aenabled by default to help with identifying any errors or exceptions pro-actively and take necessary actions.
+
+# Note: No personal information is collected from this tracking tool. No API_KEYS or PIDs will be sent to the repository.
+# You can see all the data logged by sentry here: https://gitlab.com/NoobMaster669/gg-bot-upload-assistant/-/error_tracking
+ENABLE_SENTRY_ERROR_TRACKING=True
+
+################################################################
+#                                                              #
 #           Private tracker API keys & Announce URLs           #
 #                                                              #
 ################################################################
