--- a/samples/reuploader/reupload.config.env
+++ b/samples/reuploader/reupload.config.env
@@ -36,7 +36,10 @@
 # This is aenabled by default to help with identifying any errors or exceptions pro-actively and take necessary actions.
 
 # Note: No personal information is collected from this tracking tool. No API_KEYS or PIDs will be sent to the repository.
-# You can see all the data logged by sentry here: https://gitlab.com/NoobMaster669/gg-bot-upload-assistant/-/error_tracking
+# Note: User tracking is not enabled in this project.
+# Note: Search for `if sentry_config.ENABLE_SENTRY_ERROR_TRACKING is True:` to see the configs enabled.
+# You can read more about Gitlab Sentry error tracking here: https://docs.gitlab.com/ee/operations/integrated_error_tracking.html
+# Unfortunately I couldn't find any way to make the error logs publicly available from gitlab.
 ENABLE_SENTRY_ERROR_TRACKING=True
 
 ################################################################
