Added test for season pack

--- a/e2e-tests/resources/config-test.env
+++ b/e2e-tests/resources/config-test.env
@@ -21,7 +21,7 @@
 
 # Note: No personal information is collected from this tracking tool. No API_KEYS or PIDs will be sent to the repository.
 # You can see all the data logged by sentry here: https://gitlab.com/NoobMaster669/gg-bot-upload-assistant/-/error_tracking
-ENABLE_SENTRY_ERROR_TRACKING=True
+ENABLE_SENTRY_ERROR_TRACKING=False
 
 # Private tracker API keys & Announce URLs
 # ------------------------------------------------------------ #
@@ -330,4 +330,5 @@ readable_temp_data=True
 #                  Overrides for E2E Testing                   #
 #                                                              #
 ################################################################
-tmdb_base_url=http://example.com
+tmdb_base_url=http://mock.tmdb.com
+tvmaze_base_url=http://mock.tvmaze.com
