--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,4 @@ entry.py
 tvmaze_search.py
 
 !e2e-tests/resources/*.mkv
+!e2e-tests/resources/How.I.Met.Your.Mother.S09.1080p.DSNP.WEB-DL.DDP7.1.H.264-ReleaseGroup/*.mkv
