--- a/.coveragerc
+++ b/.coveragerc
@@ -5,8 +5,9 @@ directory = coverage
 output = coverage/coverage.xml
 
 [report]
-omit = 
+omit =
     *__init__.py
     *tests/*
-exclude_lines = 
+    *e2e-tests/*
+exclude_lines =
     if __name__ == .__main__.:
