Added TVDB API Integration [skip ci] | Half Baked for now

--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -192,7 +192,9 @@ VHD_ANNOUNCE_URL=https://vision-hd.org/announce/<TRACKER_PASS_KEY>
 # TMDB API key (Required)
 TMDB_API_KEY= # https://www.themoviedb.org/documentation/api
 # IMDB API key (Optional)
-IMDB_API_KEY= # https://imdb-api.com/api
+IMDB_API_KEY= # https://tv-api.com/api
+# TVDB Api Key
+TVDB_API_KEY= # https://www.thetvdb.com/api-information
 
 # (Optional) Comma separated list of trackers which should be considered as default or fallback trackers in case `--trackers or -t`  flag is not provided.
 # eg: default_tracker_list=NBL,BLU,BHDTV -> This will by default uploads the torrent to NBL, BLU and BHDTV if `--trackers or -t` is not provided as command line argument.
