--- a/samples/reuploader/reupload.config.env
+++ b/samples/reuploader/reupload.config.env
@@ -201,7 +201,9 @@ dynamic_tracker_selection=False
 # TMDB API key (Required)
 TMDB_API_KEY= # https://www.themoviedb.org/documentation/api
 # IMDB API key (Optional)
-IMDB_API_KEY= # https://imdb-api.com/api
+IMDB_API_KEY= # https://tv-api.com/api
+# TVDB Api Key
+TVDB_API_KEY= # https://www.thetvdb.com/api-information
 
 # This below property determines whether or not the tmdb id will be automatically decided by the uploader or not.
 # Be default this is set as 1, which is the safest configuration (although not fool proof)
