--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -194,7 +194,7 @@ default_trackers_list=
 #                                                              #
 ################################################################
 # GG-BOT uploaders support uploading screenshots to 9 different image hosting services.
-# |  imgbox  |  imgbb  |  freeimage  |  ptpimg  |  imgfi  |  imgur  |  snappie  | pixhost | lensdump |
+# |  imgbox  |  imgbb  |  freeimage  |  ptpimg  |  imgfi  |  imgur  |  snappie  | pixhost | lensdump | ptscreens |
 # set their order below (spelling matters) (to remove a host just delete the value and leave it blank)
 img_host_1=
 img_host_2=
