--- a/samples/reuploader/reupload.config.env
+++ b/samples/reuploader/reupload.config.env
@@ -155,6 +155,9 @@ OTW_ANNOUNCE_URL=https://oldtoons.world/announce/<TRACKER_PASS_KEY>
 VHD_API_KEY=# API_KEY
 VHD_ANNOUNCE_URL=https://vision-hd.org/announce/<TRACKER_PASS_KEY>
 
+# Yoinked
+YOINK_API_KEY=# API_KEY
+YOINK_ANNOUNCE_URL=https://yoinked.org/announce/<TRACKER_PASS_KEY>
 
 # Dynamic Tracker Selection
 # -----------------------------------------
