--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,16 +15,19 @@
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 variables:
-  DOCKER_IMAGE: "docker:stable"
+  DOCKER_IMAGE: docker:stable
   PAGES_URL: https://noobmaster669.gitlab.io/-/gg-bot-upload-assistant/
 
 include:
-  - template: Security/Secret-Detection.gitlab-ci.yml
-  - template: Security/SAST.gitlab-ci.yml
-  - local: .gitlab/ci/*.gitlab-ci.yml
+- template: Security/Secret-Detection.gitlab-ci.yml
+- template: Security/SAST.gitlab-ci.yml
+- local: ".gitlab/ci/*.gitlab-ci.yml"
+- template: Jobs/Container-Scanning.gitlab-ci.yml
+- template: Security/Dependency-Scanning.gitlab-ci.yml
 
 stages:
-  - lint
-  - build
-  - test
-  - deploy
+- lint
+- build
+- test
+- verify
+- deploy
