Adding new tracker PrivateSilverScreen

--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -144,6 +144,10 @@ PTP_USER_PASSWORD=# Password to your account (encouraged to wrap it inside "" )
 PTP_2FA_ENABLED=False # Set this to True if you have 2fa enabled for your account.
 PTP_2FA_CODE=# The 2FA key to generate 2FA codes
 
+# PrivateSilverScreen
+PSS_API_KEY= # API_KEY
+PSS_ANNOUNCE_URL=https://privatesilverscreen.cc/announce/<TRACKER_PASS_KEY>
+
 # GreatPostertWall
 GPW_API_KEY= # API_KEY
 GPW_ANNOUNCE_URL=https://tracker.greatposterwall.com/<TRACKER_PASS_KEY>/announce
