--- a/samples/reuploader/reupload.config.env
+++ b/samples/reuploader/reupload.config.env
@@ -151,6 +151,10 @@ NXT_ANNOUNCE_URL=http://demo.n3xtsource.com/announce/<TRACKER_PASS_KEY>
 TL_API_KEY= # TRACKER_PASS_KEY
 TL_ANNOUNCE_URL='https://tracker.torrentleech.org/a/<TRACKER_PASS_KEY>/announce https://tracker.tleechreload.org/a/<TRACKER_PASS_KEY>/announce'
 
+# PrivateSilverScreen
+PSS_API_KEY= # API_KEY
+PSS_ANNOUNCE_URL=https://privatesilverscreen.cc/announce/<TRACKER_PASS_KEY>
+
 # Upload.cx
 ULCX_API_KEY= # API_KEY
 ULCX_ANNOUNCE_URL=http://upload.cx/announce/<TRACKER_PASS_KEY>
