--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -192,6 +192,10 @@ VHD_ANNOUNCE_URL=https://vision-hd.org/announce/<TRACKER_PASS_KEY>
 YOINK_API_KEY=# API_KEY
 YOINK_ANNOUNCE_URL=https://yoinked.org/announce/<TRACKER_PASS_KEY>
 
+# TmGHuB
+TMG_API_KEY=# API_KEY
+TMG_ANNOUNCE_URL=https://tmghub.org/announce.php?pid=<TRACKER_PASS_KEY>
+
 ################################################################
 #                                                              #
 #                    Other API Keys / Defaults                 #
