--- a/samples/reuploader/reupload.config.env
+++ b/samples/reuploader/reupload.config.env
@@ -179,6 +179,10 @@ VHD_ANNOUNCE_URL=https://vision-hd.org/announce/<TRACKER_PASS_KEY>
 YOINK_API_KEY=# API_KEY
 YOINK_ANNOUNCE_URL=https://yoinked.org/announce/<TRACKER_PASS_KEY>
 
+# TmGHuB
+TMG_API_KEY=# API_KEY
+TMG_ANNOUNCE_URL=https://tmghub.org/announce.php?pid=<TRACKER_PASS_KEY>
+
 # Dynamic Tracker Selection
 # -----------------------------------------
 # Dynamic tracker selection allows the user to control the trackers to which each torrent will be uploaded to.
