bugfix: Issue#159 torf memory issues in shared seedboxes

--- a/e2e-tests/resources/mock_server_config.yml
+++ b/e2e-tests/resources/mock_server_config.yml
@@ -71,6 +71,15 @@ mocks:
       status_code: 200
       body: '{"success":true,"status_code":0,"data":[{"name":"Deadpool 2 2018 1080p UHD BluRay DD+ 7 1 HDR x265-NCmt"},{"name":"Deadpool 2 Super Duper Cut 2018 1080p BluRay DTS-HD MA 7 1 x265-NAN0"},{"name":"Deadpool 2 2018 2160p UHD BluRay Hybrid REMUX DV HDR HEVC TrueHD 7 1 Atmos-FraMeSToR"},{"name":"Deadpool 2 2018 2160p UHD BluRay x265-TERMiNAL"},{"name":"Deadpool 2 2018 Super Duper Cut 2160p UHD BluRay REMUX HDR HEVC Atmos-EPSiLON"},{"name":"Deadpool 2 2018 Theatrical 2160p UHD BluRay REMUX HDR HEVC Atmos-EPSiLON"},{"name":"Deadpool 2 2018 Theatrical Cut Hybrid 2160p UHD Remux HEVC DoVi TrueHD Atmos 7 1-playBD"},{"name":"Deadpool 2016 1080p BluRay REMUX AVC DTS-HD MA 7 1-FraMeSToR"},{"name":"Deadpool 2016 1080p BluRay x264 DTS-WiKi"},{"name":"Deadpool 2016 2160p UHD BluRay Hybrid REMUX DV HDR HEVC TrueHD 7 1 Atmos-FraMeSToR"},{"name":"Deadpool 2016 2160p UHD BluRay REMUX HDR HEVC Atmos-EPSiLON"},{"name":"Unreported World S44E03 1080p HDTV AAC 2 0 H.264-DEADPOOL"}],"status_message":"Successfully fetched data"}'
 
+  - url: "/api/search.php?api_key=PLACEHOLDER_API_KEY&filter=How%20I%20Met%20Your%20Mother"
+    method: "GET"
+    headers:
+      Content-Type: "application/json"
+    response:
+      status_code: 200
+      body: '{"success":true,"status_code":0,"data":[],"status_message":"Successfully fetched data"}'
+
+
   - url: "/api/upload.php?api_key=PLACEHOLDER_API_KEY"
     method: "POST"
     headers:
