devscript: torrent libraries performance test

--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,4 @@ tvmaze_search.py
 
 !e2e-tests/resources/*.mkv
 !e2e-tests/resources/How.I.Met.Your.Mother.S09.1080p.DSNP.WEB-DL.DDP7.1.H.264-ReleaseGroup/*.mkv
+dev_scripts/gibberish/*
