--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,18 +1,18 @@
-pymediainfo~=5.1.0
-python-dotenv~=0.19.2
-requests~=2.27.1
-ffmpy~=0.3.0
-guessit~=3.7.1
-rich~=12.0.1
-fuzzywuzzy~=0.18.0
-pyimgbox~=1.0.5
-torf~=3.1.3
-python-Levenshtein~=0.12.2
-ptpimg_uploader~=0.6
-imgurpython~=1.1.7
-qbittorrent-api~=2022.2.28
-pymongo~=4.1.1
-pyfiglet~=0.8.post1
 cinemagoer~=2023.5.1
 fastjsonschema~=2.16.2
-sentry-sdk==2.13.0
+ffmpy~=0.5.0
+fuzzywuzzy~=0.18.0
+guessit~=3.8.0
+imgurpython~=1.1.7
+ptpimg_uploader~=0.6
+pyfiglet~=1.0.2
+pyimgbox~=1.0.5
+pymediainfo~=6.1.0
+pymongo~=4.1.1
+python-dotenv~=1.0.1
+python-Levenshtein~=0.26.1
+qbittorrent-api~=2022.2.28
+requests~=2.32.3
+sentry-sdk~=2.20.0
+rich~=13.9.4
+torf~=4.2.7
