--- a/requirements/requirements_dev.txt
+++ b/requirements/requirements_dev.txt
@@ -1,28 +1,7 @@
-pymediainfo~=5.1.0
-python-dotenv~=0.19.2
-requests~=2.27.1
-ffmpy~=0.3.0
-guessit~=3.7.1
-rich~=12.0.1
-fuzzywuzzy~=0.18.0
-pyimgbox~=1.0.5
-torf~=3.1.3
-python-Levenshtein~=0.12.2
-ptpimg_uploader~=0.6
-imgurpython~=1.1.7
-pytest~=7.1.2
-pytest-cov~=3.0.0
-pytest-mock~=3.7.0
-Werkzeug~=2.1.2
-Flask-RESTful~=0.3.9
-qbittorrent-api~=2022.2.28
-pymongo~=4.0.2
-pyfiglet~=0.8.post1
-cinemagoer~=2023.5.1
-fastjsonschema~=2.16.2
-mongomock~=4.1.2
-setuptools~=69.2.0
-poetry
-codespell
-sentry-sdk==2.13.0
-pip-check
+-r requirements.txt
+-r requirements_reuploader.txt
+-r requirements_test.txt
+codespell~=2.4.0
+pip-check~=2.9
+poetry==2.0.0 # poetry-plugin-export 1.9.0 needs poetry 2.0.0
+poetry-plugin-export~=1.9.0
