--- a/requirements/requirements_test.txt
+++ b/requirements/requirements_test.txt
@@ -5,8 +5,7 @@ mongomock~=4.3.0
 pytest~=8.3.4
 pytest-cov~=6.0.0
 pytest-mock~=3.14.0
-yaml8~=0.1.2
-PyYaml==6.0 # yaml8 0.1.2 Needs PyYaml 6.0
+PyYaml==5.3.1 # PyYaml cannot be upgraded in alpine.
 requests-mock~=1.12.1
 setuptools~=75.8.0
 testcontainers~=4.9.1
