--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,3 +30,18 @@ stages:
 - test
 - verify
 - deploy
+
+release-set:
+  stage: test
+  image: noobmaster669/gg-bot-base:test-latest
+  variables:
+    SOURCE_DIRECTORY: gg-bot-upload-assistant
+  script:
+    - echo "${CI_COMMIT_TAG:-$CI_COMMIT_SHA}" > RELEASE
+  artifacts:
+    paths:
+      - RELEASE
+    expire_in: 1 week
+  rules:
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+    
