--- a/.codacy.yml
+++ b/.codacy.yml
@@ -1,6 +1,6 @@
 ---
 assert_used:
-  skips: ['*_test.py', '*test_*.py']
+  skips: ['*test.py', '*test*.py', 'e2e-tests/*']
 exclude_paths:
   - "**/tests/**"
   - "**/e2e-tests/**"
