Docker file to work with new requirements format

--- a/Dockerfiles/Dockerfile.armhf
+++ b/Dockerfiles/Dockerfile.armhf
@@ -20,14 +20,13 @@ FROM noobmaster669/gg-bot-base:armhf-latest
 WORKDIR /app
 
 # add local files
-COPY requirements/requirements.txt .
+COPY requirements .
 RUN \
   echo "**** install pip packages ****" && \
-  pip3 install -r requirements.txt && \
-  pip3 freeze > requirements.txt
+  pip3 install -r requirements/requirements.txt && \
+  pip3 freeze > requirements/requirements.txt
 
 COPY . .
-RUN rm -r requirements/ requirements.txt
 RUN rm auto_reupload.py && chmod +x auto_upload.py
 
 # ports and volumes
