--- a/Dockerfiles/Dockerfile.aarch64
+++ b/Dockerfiles/Dockerfile.aarch64
@@ -20,17 +20,15 @@ FROM noobmaster669/gg-bot-base:aarch64-latest
 WORKDIR /app
 
 # add local files
-COPY requirements/requirements.txt .
+COPY requirements .
 RUN \
   echo "**** install pip packages ****" && \
-  pip3 install -r requirements.txt && \
-  pip3 freeze > requirements.txt
+  pip3 install -r requirements/requirements.txt && \
+  pip3 freeze > requirements/requirements.txt
 
 COPY . .
-RUN rm -r requirements/ requirements.txt
 RUN rm auto_reupload.py && chmod +x auto_upload.py
 
-# ports and volumes
 VOLUME /data /temp_upload
 
 ENTRYPOINT [ "python3", "auto_upload.py"]
