--- a/Dockerfiles/Dockerfile.baseimage.armhf
+++ b/Dockerfiles/Dockerfile.baseimage.armhf
@@ -46,10 +46,9 @@ RUN \
 	unrar
 
 
-COPY requirements/requirements_baseimages.txt .
+COPY requirements .
 RUN \
   echo "**** install pip prerequisite packages ****" && \
-  pip3 install -r requirements_baseimages.txt && \
-  pip3 freeze > requirements_baseimages.txt
 
-RUN rm requirements_baseimages.txt
+  pip3 install -r requirements/requirements_baseimages.txt && \
+  pip3 freeze > requirements/requirements_baseimages.txt
