--- a/Dockerfiles/Dockerfile.baseimage.disk
+++ b/Dockerfiles/Dockerfile.baseimage.disk
@@ -79,10 +79,8 @@ RUN \
 	chmod +x /usr/bin/bdinfocli
 
 
-COPY requirements/requirements_baseimages.txt .
+COPY requirements .
 RUN \
   echo "**** install pip prerequisite packages ****" && \
-  pip3 install -r requirements_baseimages.txt && \
-  pip3 freeze > requirements_baseimages.txt
-
-RUN rm requirements_baseimages.txt
+  pip3 install -r requirements/requirements_baseimages.txt && \
+  pip3 freeze > requirements/requirements_baseimages.txt
