--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,14 +19,14 @@ variables:
   PAGES_URL: https://noobmaster669.gitlab.io/-/gg-bot-upload-assistant/
 
 include:
-- template: Security/Secret-Detection.gitlab-ci.yml
-- template: Security/SAST.gitlab-ci.yml
-- local: ".gitlab/ci/*.gitlab-ci.yml"
-- template: Security/Dependency-Scanning.gitlab-ci.yml
+  - template: Security/Secret-Detection.gitlab-ci.yml
+  - template: Security/SAST.gitlab-ci.yml
+  - local: ".gitlab/ci/*.gitlab-ci.yml"
+  - component: $CI_SERVER_FQDN/components/dependency-scanning/main@0
 
 stages:
-- lint
-- build
-- test
-- verify
-- deploy
+  - lint
+  - build
+  - test
+  - verify
+  - deploy
