--- a/Dockerfiles/Dockerfile.baseimage.armhf
+++ b/Dockerfiles/Dockerfile.baseimage.armhf
@@ -46,9 +46,11 @@ RUN \
 	unrar
 
 
-COPY requirements .
+COPY requirements /
 RUN \
   echo "**** install pip prerequisite packages ****" && \
 
-  pip3 install -r requirements/requirements_baseimages.txt && \
-  pip3 freeze > requirements/requirements_baseimages.txt
+  pip3 install -r /requirements/requirements_baseimages.txt && \
+  pip3 freeze > /requirements/requirements_baseimages.txt
+
+RUN rm -rf /requirements
