--- a/Dockerfiles/Dockerfile.baseimage.disk
+++ b/Dockerfiles/Dockerfile.baseimage.disk
@@ -79,8 +79,10 @@ RUN \
 	chmod +x /usr/bin/bdinfocli
 
 
-COPY requirements .
+COPY requirements /
 RUN \
   echo "**** install pip prerequisite packages ****" && \
-  pip3 install -r requirements/requirements_baseimages.txt && \
-  pip3 freeze > requirements/requirements_baseimages.txt
+  pip3 install -r /requirements/requirements_baseimages.txt && \
+  pip3 freeze > /requirements/requirements_baseimages.txt
+
+RUN rm -rf /requirements
