--- a/Dockerfiles/Dockerfile.baseimage.test
+++ b/Dockerfiles/Dockerfile.baseimage.test
@@ -171,10 +171,12 @@ RUN set -eux; \
 	pip --version
 
 
-COPY requirements .
+COPY requirements /
 RUN \
   echo "**** install pip prerequisite packages ****" && \
-  pip3 install -r requirements/requirements_baseimages.txt && \
-  pip3 freeze > requirements/requirements_baseimages.txt
+  pip3 install -r /requirements/requirements_baseimages.txt && \
+  pip3 freeze > /requirements/requirements_baseimages.txt
+
+RUN rm -rf /requirements
 
 CMD ["python3"]
