--- a/Dockerfiles/Dockerfile.baseimage.aarch64
+++ b/Dockerfiles/Dockerfile.baseimage.aarch64
@@ -46,8 +46,10 @@ RUN \
 	unrar
 
 
-COPY requirements .
+COPY requirements /
 RUN \
   echo "**** install pip prerequisite packages ****" && \
-  pip3 install -r requirements/requirements_baseimages.txt && \
-  pip3 freeze > requirements/requirements_baseimages.txt
+  pip3 install -r /requirements/requirements_baseimages.txt && \
+  pip3 freeze > /requirements/requirements_baseimages.txt
+
+RUN rm -rf /requirements
