Fixing base images docker files

--- a/Dockerfiles/Dockerfile.armhf
+++ b/Dockerfiles/Dockerfile.armhf
@@ -20,7 +20,7 @@ FROM noobmaster669/gg-bot-base:armhf-latest
 WORKDIR /app
 
 # add local files
-COPY requirements .
+COPY requirements requirements
 RUN \
   echo "**** install pip packages ****" && \
   pip3 install -r requirements/requirements.txt && \
