--- a/Dockerfiles/Dockerfile.baseimage.armhf
+++ b/Dockerfiles/Dockerfile.baseimage.armhf
@@ -45,12 +45,12 @@ RUN \
 	mktorrent \
 	unrar
 
+WORKDIR /build
+COPY requirements requirements
 
-COPY requirements /
 RUN \
   echo "**** install pip prerequisite packages ****" && \
+  pip3 install -r requirements/requirements_baseimages.txt && \
+  pip3 freeze > requirements/requirements_baseimages.txt
 
-  pip3 install -r /requirements/requirements_baseimages.txt && \
-  pip3 freeze > /requirements/requirements_baseimages.txt
-
-RUN rm -rf /requirements
+RUN rm -rf requirements
