--- a/Dockerfiles/Dockerfile.baseimage
+++ b/Dockerfiles/Dockerfile.baseimage
@@ -46,10 +46,12 @@ RUN \
 	unrar
 
 
-COPY requirements /
+WORKDIR /build
+
+COPY requirements requirements
 RUN \
   echo "**** install pip prerequisite packages ****" && \
-  pip3 install -r /requirements/requirements_baseimages.txt && \
-  pip3 freeze > /requirements/requirements_baseimages.txt
+  pip3 install -r requirements/requirements_baseimages.txt && \
+  pip3 freeze > requirements/requirements_baseimages.txt
 
-RUN rm -rf /requirements
+RUN rm -r requirements
