--- a/Dockerfiles/Dockerfile.reuploader
+++ b/Dockerfiles/Dockerfile.reuploader
@@ -30,13 +30,14 @@ RUN \
 
 
 # add local files
-COPY requirements .
+COPY requirements requirements
 RUN \
   echo "**** install pip packages ****" && \
   pip install -r requirements/requirements_reuploader.txt && \
   pip freeze > requirements/requirements_reuploader.txt
 
 COPY . .
+RUN rm -rf requirements
 RUN rm auto_upload.py && chmod +x auto_reupload.py
 
 # ports and volumes
