--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,9 @@ tvmaze_search.py
 !e2e-tests/resources/How.I.Met.Your.Mother.S09.1080p.DSNP.WEB-DL.DDP7.1.H.264-ReleaseGroup/*.mkv
 dev_scripts/gibberish/*
 description_templates/custom/**
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
