--- a/e2e-tests/resources/reupload-test.config.env
+++ b/e2e-tests/resources/reupload-test.config.env
@@ -40,7 +40,7 @@
 # Note: Search for `if sentry_config.ENABLE_SENTRY_ERROR_TRACKING is True:` to see the configs enabled.
 # You can read more about Gitlab Sentry error tracking here: https://docs.gitlab.com/ee/operations/integrated_error_tracking.html
 # Unfortunately I couldn't find any way to make the error logs publicly available from gitlab.
-ENABLE_SENTRY_ERROR_TRACKING=True
+ENABLE_SENTRY_ERROR_TRACKING=False
 
 ################################################################
 #                                                              #
@@ -53,7 +53,7 @@ ACM_ANNOUNCE_URL=https://asiancinema.me/announce/PLACEHOLDER_PID
 BHD_API_KEY=PLACEHOLDER_API_KEY
 BHD_ANNOUNCE_URL=https://beyond-hd.me/announce/PLACEHOLDER_PID
 
-BLU_API_KEY=PLACEHOLDER_API_KEY
+BLU_API_KEY=
 BLU_ANNOUNCE_URL=https://blutopia.xyz/announce/PLACEHOLDER_PID
 
 R4E_API_KEY=PLACEHOLDER_API_KEY
@@ -268,10 +268,10 @@ cross_seed_label=GGBotCrossSeed
 # See Setup and Upgrade Wiki page for samples
 client=Rutorrent
 # These are the configurations needed to connect to the torrent client
-client_host=http://rutorrent
-client_port=8080
-client_username=admin
-client_password=admin
+client_host=<<CLIENT_HOST_PLACEHOLDER>>
+client_port=<<CLIENT_PORT_PLACEHOLDER>>
+client_username=
+client_password=
 # applicable for rutorrent only as of now. Default is /
 client_path=/
 
@@ -284,8 +284,8 @@ client_path=/
 #           those characters must be converted using percent encoding.
 # PS: Connection with mongo from docker-compose is configured by default
 cache_type=Mongo
-cache_host=mongo
-cache_port=27017
+cache_host=<<MONGO_HOST_PLACEHOLDER>>
+cache_port=<<MONGO_PORT_PLACEHOLDER>>
 cache_database=gg-bot-reuploader
 cache_username=
 cache_password=
