--- a/.gitlab/ci/tests.gitlab-ci.yml
+++ b/.gitlab/ci/tests.gitlab-ci.yml
@@ -101,7 +101,7 @@ unit-test:
     # sending coverage report to codecov
     - curl -Os https://uploader.codecov.io/latest/alpine/codecov
     - chmod +x codecov
-    - /codecov -F unit-test --verbose -R .
+    - ./codecov -F unit-test --verbose -R .
     - codecovcli do-upload --report-type test_results --file unit-test.junit.xml
 
     # sending coverage report for codacy
