--- a/samples/reuploader/reupload.config.env
+++ b/samples/reuploader/reupload.config.env
@@ -57,7 +57,7 @@ SHRI_ANNOUNCE_URL=https://shareisland.org/announce/<TRACKER_PASS_KEY>
 
 # AsianCinema
 ACM_API_KEY=# API_KEY
-ACM_ANNOUNCE_URL=https://asiancinema.me/announce/<TRACKER_PASS_KEY>
+ACM_ANNOUNCE_URL=https://eiga.moi/announce/<TRACKER_PASS_KEY>
 
 # Beyond-HD
 BHD_API_KEY=# API_KEY
