--- a/requirements/requirements_reuploader.txt
+++ b/requirements/requirements_reuploader.txt
@@ -1,5 +1,5 @@
 -r requirements.txt
-Flask~=3.1.0
-marshmallow~=3.26.0
-schedule~=1.2.2
-wheel~=0.45.1
+Flask==3.1.0
+marshmallow==3.26.0
+schedule==1.2.2
+wheel==0.45.1
