--- a/requirements/requirements_test.txt
+++ b/requirements/requirements_test.txt
@@ -1,13 +1,13 @@
 -r requirements.txt
 -r requirements_reuploader.txt
-Flask-RESTful~=0.3.9
-importlib-metadata~=8.6.1
-mongomock~=4.3.0
-pytest~=8.3.4
-pytest-cov~=6.0.0
-pytest-mock~=3.14.0
+Flask-RESTful==0.3.9
+importlib-metadata==8.6.1
+mongomock==4.3.0
+pytest==8.3.4
+pytest-cov==6.0.0
+pytest-mock==3.14.0
 PyYaml==5.3.1 # PyYaml cannot be upgraded in alpine.
-requests-mock~=1.12.1
-setuptools~=75.8.0
-testcontainers~=4.9.1
-Werkzeug~=3.1.3
+requests-mock==1.12.1
+setuptools==75.8.0
+testcontainers==4.9.1
+Werkzeug==3.1.3
